# feeds_and_speeds

./: .gitignore  .pre-commit-config.yaml  README.md  manage.py  mypy.ini  pyproject.toml  pytest.ini  setup.cfg
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
api/: admin.py  admin_helper.py  calculator.py  serializers.py  urls.py  views.py
api/fixtures/: default.json
api/migrations/: 0001_initial.py
api/models/: __init__.py  cutting.py  machine.py  material.py  tool.py
api/tests/: test_calculator.py
drilling/: admin.py  apps.py  constants.py  models.py  serializers.py  urls.py  views.py
drilling/fixtures/: default.json
drilling/migrations/: 0001_initial.py  0002_auto_20210221_2011.py  0003_auto_20210221_2025.py  0004_auto_20210222_1724.py  0005_auto_20210222_1739.py
feeds_and_speeds/: asgi.py  settings.py  wsgi.py
machinist_toolbox/: __init__.py  admin_helper.py  asgi.py  constants.py  settings.py  urls.py  wsgi.py
materials/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
materials/fixtures/: default.json
materials/migrations/: 0001_initial.py
milling/: apps.py  calculator.py  constants.py  serializers.py  urls.py  views.py
milling/admin/: __init__.py  cutting_data.py  machine.py  tool.py  tool_table.py
milling/fixtures/: default.json
milling/migrations/: 0001_initial.py  0002_auto_20210220_2024.py  0003_remove_tool_name.py  0004_tooltable.py  0005_auto_20210226_1103.py  0006_auto_20210226_1105.py  0007_auto_20210226_1110.py
milling/models/: __init__.py  cutting.py  machine.py  tool.py  tool_table.py
milling/templates/admin/: export_linuxcnc.txt  tool_table_change_list.html
milling/tests/: __init__.py  test_calculator.py
milling_calculator/: admin.py  constants.py  urls.py
milling_calculator/fixtures/: default.json
milling_calculator/migrations/: 0001_initial.py  0002_auto_20210220_2024.py
milling_calculator/models/: tool.py
