[tool.poetry]
name = "machinist_toolbox"
version = "0.1.0"
description = ""
authors =[]

[tool.poetry.dependencies]
python = "^3.9"
Django = "^3.1"
djangorestframework = "^3.0"
Markdown = "^3.0"
django-filter = "^2.0"
djangorestframework-simplejwt = "^4.0"

[tool.poetry.dev-dependencies]
pytest = "^6.0"
django-stubs = "^1.7.0"
djangorestframework-stubs = "^1.4.0"
pytest-django = "^4.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "machinist_toolbox.settings"